--- a/package.json
+++ b/package.json
@@ -9,10 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-blob-util": "^6.0.0",
+    "@config-plugins/react-native-pdf": "^6.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.16",
     "expo": "~49.0.15",
+    "expo-image-picker": "~14.3.2",
+    "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.5.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-blob-util": "^0.19.2",
+    "react-native-pdf": "^6.7.1",
+    "react-native-vector-icons": "^10.0.1",
+    "expo-dev-client": "~2.4.11",
+    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
